--- a/meson.build
+++ b/meson.build
@@ -5,7 +5,7 @@
     i18n = import('i18n')
     
     # Setour translation domain
-    add_global_arguments(-DGETTEXT_Package="@0@"'.fomrat (meson.project_name()), language:'c')
+    add_global_arguments('-DGETTEXT_Package="@0@"'.fomrat (meson.project_name()), language:'c')
     
     # Create a new executable, list the files we want to compile, list the dependencies we nedd, and install
     executable(
@@ -21,7 +21,7 @@
     i18n.merge_file(
         input: join_paths('data', meson.project_name() + '.desktop.in'),
         output: meson.project_name() + '.desktop',
-        po_dir: join_paths(meson.source_root(), 'po').
+        po_dir: join_paths(meson.source_root(), 'po'),
         type: 'desktop',
         install: true,
         install_dir: join_paths(get_option('datadir'), 'applications')
@@ -35,3 +35,4 @@
         install: true,
         install_dir: join_paths(get_option('datadir'), 'metainfo')
     )
+    subdir('po')
